--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "react": "16.5.0",
-    "react-native": "0.57.1"
+    "react-native": "0.57.1",
+    "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-vector-icons": "^5.0.0",
+    "react-navigation": "^2.17.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
