--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
     "react": "16.5.0",
-    "react-native": "0.57.1",
+    "react-native": "0.57.0",
+    "react-native-camera": "^1.3.0",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-vector-icons": "^5.0.0",
-    "react-navigation": "^2.17.0"
+    "react-navigation": "^2.17.0",
+    "schedule": "^0.4.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.46.0",
+    "metro-react-native-babel-preset": "0.45.3",
     "react-test-renderer": "16.5.0"
   },
   "jest": {
